--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint-config-next": "14.0.1",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "prisma": "^5.6.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.1",
