--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "dev:turbo": "next dev --turbo",
-    "build": "next build",
+    "build": "npm run prisma:deploy && next build",
     "start": "next start",
+    "prisma:deploy": "npx prisma migrate deploy && prisma generate",
     "lint": "next lint",
     "seed": "ts-node src/seed/seed-database.ts"
   },
